Affichage météo : decription, temp, vent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="departement">Department</string>
     <string name="region">Region</string>
     <string name="meteoBtn">Météo</string>
+    <string name="tempText">Température : %1$s °C</string>
+    <string name="windSpeed">Vitesse du vent : %1$s km/h</string>
 </resources>
